deploy: 5649792c1a62a7e018f81da061ac856193c40305

--- a/introduction.html
+++ b/introduction.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Let&#x27;s build a git!</title>
-        <meta name="robots" content="noindex" />
+        <title>Introduction - Let&#x27;s build a git!</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -76,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Init</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> ls-tree</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> cat-file</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Commit</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html" class="active">Introduction</a></li><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Init</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> ls-tree</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> cat-file</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Commit</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -138,53 +137,23 @@
                         <h1 id="git-init"><a class="header" href="#git-init">Git init</a></h1>
 <p>Introduction</p>
 <p>something here</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="git-init-1"><a class="header" href="#git-init-1">Git init</a></h1>
-<p>Let's write a git algorithm together!</p>
-<pre><code class="language-java">import cli.*;
-import picocli.CommandLine;
-import picocli.CommandLine.Command;
-
-import java.util.concurrent.Callable;
-
-import static helper.Utility.MsgLevel;
-import static helper.Utility.printLog;
-
-@Command(name = &quot;git&quot;, mixinStandardHelpOptions = true, subcommands = {
-        GitInitCli.class,
-        GitCatFileCli.class,
-        GitHashObjectCli.class,
-        GitLogCli.class,
-        GitLsTreeCli.class,
-        GitRestoreCli.class,
-        GitShowRefCli.class,
-        GitTagCli.class,
-        GitStatusCli.class,
-        GitCommitCli.class,
-})
-public final class Git implements Callable&lt;Integer&gt; {
-    @Override
-    public Integer call() {
-        printLog(&quot;Cannot call git without sub-command!&quot;, MsgLevel.ERROR);
-        return 1;
-    }
-
-    public static void main(String... args) {
-        int exitCode = new CommandLine(new Git()).execute(args);
-        System.exit(exitCode);
-    }
-}
-</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="next" href="chapter_1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
                         <div style="clear: both"></div>
                     </nav>
                 </div>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="next" href="chapter_1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -200,10 +169,5 @@ public final class Git implements Callable&lt;Integer&gt; {
         <script src="book.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- Custom JS scripts -->
-        <script type="text/javascript">
-        window.addEventListener('load', function() {
-            window.setTimeout(window.print, 100);
-        });
-        </script>
     </body>
 </html>
