--- a/404.html
+++ b/404.html
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><div>Introduction</div></li><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Init</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> ls-tree</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> cat-file</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Commit</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Init</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> ls-tree</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> cat-file</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Commit</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
